add new java emulator